fix image overflow

--- a/src/app/modules/product/pages/my-products/my-products.component.scss
+++ b/src/app/modules/product/pages/my-products/my-products.component.scss
@@ -5,6 +5,7 @@
 .card-img-top {
     max-height: 150px;
     width: auto;
+    max-width: 100%s;
 }
 
 .card-title {
